--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
         "@shopify/shopify-api": "^11.0.1",
+        "@tailwindcss/typography": "^0.5.14",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "astro": "4.13.3",
