--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
-        "@astrojs/check": "0.9.2",
+        "@astrojs/check": "0.9.3",
         "@astrojs/react": "3.6.2",
         "@astrojs/tailwind": "^5.1.0",
-        "@astrojs/vercel": "^7.7.2",
+        "@astrojs/vercel": "7.8.0",
         "@fontsource-variable/rubik": "^5.0.22",
         "@nanostores/persistent": "^0.10.1",
         "@nanostores/react": "^0.7.2",
@@ -28,7 +28,7 @@
         "@tailwindcss/typography": "^0.5.14",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "astro": "4.13.3",
+        "astro": "4.14.5",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.399.0",
