--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     },
     "dependencies": {
         "@astrojs/check": "0.9.3",
+        "@astrojs/node": "^8.3.4",
         "@astrojs/react": "3.6.2",
         "@astrojs/tailwind": "^5.1.0",
-        "@astrojs/vercel": "7.8.0",
         "@fontsource-variable/rubik": "^5.0.22",
         "@nanostores/persistent": "^0.10.1",
         "@nanostores/react": "^0.7.2",
