--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
-        "@astrojs/check": "0.9.3",
-        "@astrojs/node": "^8.3.4",
-        "@astrojs/react": "3.6.2",
-        "@astrojs/tailwind": "^5.1.0",
+        "@astrojs/check": "0.9.4",
+        "@astrojs/node": "9.0.2",
+        "@astrojs/react": "4.2.0",
+        "@astrojs/tailwind": "6.0.0",
         "@fontsource-variable/rubik": "^5.0.22",
         "@nanostores/persistent": "^0.10.1",
         "@nanostores/react": "^0.7.2",
@@ -28,7 +28,7 @@
         "@tailwindcss/typography": "^0.5.14",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "astro": "4.16.1",
+        "astro": "5.2.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.399.0",
@@ -43,7 +43,6 @@
         "typescript": "^5.5.2"
     },
     "devDependencies": {
-        "@flydotio/dockerfile": "^0.5.7",
         "prettier-plugin-astro": "^0.14.0",
         "prettier-plugin-tailwindcss": "^0.6.5"
     }
